<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mentalhealth.ui.login.LoginFragment"
        android:label="@string/nav_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mentalhealth.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/journalFragment"
        android:name="com.example.mentalhealth.ui.journal.JournalFragment"
        android:label="@string/nav_journal" />

    <fragment
        android:id="@+id/toolsFragment"
        android:name="com.example.mentalhealth.ui.tools.ToolsFragment"
        android:label="@string/nav_tools" />

    <fragment
        android:id="@+id/communityFragment"
        android:name="com.example.mentalhealth.ui.community.CommunityFragment"
        android:label="@string/nav_community" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.mentalhealth.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />
</navigation>
